--- a/cart.html
+++ b/cart.html
@@ -90,6 +90,7 @@
         <h2>Carrito de comrpas</h2>
         <p class="lead">Articulos a comprar</p>
       </div>
+      <!--Articulo del  usuario 25801-->
       <div id="escribir"></div>
 
       <!-- Direccion y metodo de envio -->
