--- a/cart.html
+++ b/cart.html
@@ -177,13 +177,52 @@
               </div>
             </div>
           </div>
+        </div>  
+        <!-- nuevo -->
+        <div class="container">
+      <div class=" mt-5 row align-items-center tarjet p-3 rounded-3 " id="infoCost">
+        <div class="list-group-item">
+          <div class="d-flex justify-content-between">
+            <h3 class="text-title"><b>Costo</b></h3>
         </div>
-        <div class="col-12 ms-5 mt-4 mb-3">
+        <div class="list-group-item">
+          <div class="d-flex  justify-content-between">
+            <h5 class="mb-1">Subtotal</h5>
+            <div>
+              <small>USD </small><small id="subtotalCost">
+
+              </small>
+            </div>
+          </div>
+          <p class="mb-1">Costo subtotal general</p>
+        </div>
+        <div class="list-group-item">
+          <div class="d-flex justify-content-between">
+            <h5 class="mb-1">Costo de envio</h5>
+            <div>
+              <small>USD </small><small id="costTrip"></small>
+            </div>
+          </div>
+          <p class="mb-1">Segun el tipo de envio</p>
+        </div>
+        <div class="list-group-item">
+          <div class="d-flex justify-content-between">
+            <h5 class="mb-1">Total ($)</h5>
+            <div>
+              <small>USD </small><b><small id="totalCost"></small></b>
+            </div>
+          </div>
+        </div>
+      </div>
+</div></div>
+        <div class="col-12 ms-5 mt-4 mb-3 ">
           <button class="btn btn-secondary ms-5 ps-5 pe-5" type="submit">
             Comprar
           </button>
         </div>
       </form>
+    
+
     </main>
 
     <script src="js/bootstrap.bundle.min.js"></script>
