--- a/cart.html
+++ b/cart.html
@@ -178,7 +178,9 @@
             </div>
           </div>
         </div>  
-        <!-- nuevo -->
+        <!-- e6 -->
+
+
         <div class="container">
       <div class=" mt-5 row align-items-center tarjet p-3 rounded-3 " id="infoCost">
         <div class="list-group-item">
@@ -189,7 +191,7 @@
           <div class="d-flex  justify-content-between">
             <h5 class="mb-1">Subtotal</h5>
             <div>
-              <small>USD </small><small id="subtotalCost">
+              <small>USD </small>123<small>
 
               </small>
             </div>
@@ -200,7 +202,7 @@
           <div class="d-flex justify-content-between">
             <h5 class="mb-1">Costo de envio</h5>
             <div>
-              <small>USD </small><small id="costTrip"></small>
+              <small>USD </small><small >123</small>
             </div>
           </div>
           <p class="mb-1">Segun el tipo de envio</p>
@@ -209,7 +211,7 @@
           <div class="d-flex justify-content-between">
             <h5 class="mb-1">Total ($)</h5>
             <div>
-              <small>USD </small><b><small id="totalCost"></small></b>
+              <small>USD </small><small >123</small>
             </div>
           </div>
         </div>
