--- a/my-profile.html
+++ b/my-profile.html
@@ -65,15 +65,11 @@
     </div>
   </nav>
   <main>
-
-   
     <div>
-       <div class="pt-4">
-      <h2 class="mt-4 ms-5">Perfil
-      
+       <div class="pt-4 ">
+      <h2 class="mt-4 ms-5 me-5">Perfil
       <hr>
-    </div>
-       
+    </div>  
       <div class="container"> </h2>
       <form class="row g-3 needs-validation" novalidate>
         <div class="col-md-4 position-relative">
@@ -106,7 +102,7 @@
         </div>
         <div class="col-md-4 position-relative mt-5">
           <label for="validationTooltip05" class="form-label">E-mail*</label>
-          <input type="email" class="form-control" id="validationTooltip05" required>
+          <input type="email" class="form-control" id="validationTooltip05" readonly required>
           <div class="valid-tooltip">
             Perfecto!
           </div>
