--- a/my-profile.html
+++ b/my-profile.html
@@ -8,22 +8,6 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-  </style>
 </head>
 
 <body>
@@ -33,7 +17,7 @@
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" >
+      <div class="collapse navbar-collapse">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
             <a class="nav-link" href="inicio.html">Inicio</a>
@@ -44,12 +28,13 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          
+
           <li class="nav-item">
-            <div class="collapse navbar-collapse" >
+            <div class="collapse navbar-collapse">
               <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="showEmail" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" id="showEmail" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
                   </a>
                   <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                     <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
@@ -64,13 +49,14 @@
       </div>
     </div>
   </nav>
+
   <main>
-    <div>
-       <div class="pt-4 ">
+    <div class="pt-4 ">
       <h2 class="mt-4 ms-5 me-5">Perfil
-      <hr>
-    </div>  
-      <div class="container"> </h2>
+        <hr>
+    </div>
+    <div class="container">
+      </h2>
       <form class="row g-3 needs-validation" novalidate>
         <div class="col-md-4 position-relative">
           <label for="validationTooltip01" class="form-label">Primer nombre*</label>
@@ -80,11 +66,11 @@
           </div>
           <div class="invalid-tooltip">
             Debe completar el campo
-           </div>
+          </div>
         </div>
         <div class="col-md-4 position-relative">
           <label for="validationTooltip02" class="form-label">Segundo nombre</label>
-          <input type="text" class="form-control" id="validationTooltip02" >
+          <input type="text" class="form-control" id="validationTooltip02">
         </div>
         <div class="col-md-4 position-relative">
           <label for="validationTooltip03" class="form-label">Primer apellido*</label>
@@ -93,12 +79,12 @@
             Perfecto!
           </div>
           <div class="invalid-tooltip">
-           Debe completar el campo
+            Debe completar el campo
           </div>
         </div>
         <div class="col-md-4 position-relative mt-5">
           <label for="validationTooltip04" class="form-label">Segundo apellido</label>
-          <input type="text" class="form-control" id="validationTooltip04" >
+          <input type="text" class="form-control" id="validationTooltip04">
         </div>
         <div class="col-md-4 position-relative mt-5">
           <label for="validationTooltip05" class="form-label">E-mail*</label>
@@ -107,21 +93,20 @@
             Perfecto!
           </div>
           <div class="invalid-tooltip">
-           Debe ingresar un e-mail
+            Debe ingresar un e-mail
           </div>
         </div>
         <div class="col-md-4 position-relative mt-5">
           <label for="validationTooltip06" class="form-label">Telefono de contacto</label>
-          <input type="number" class="form-control" id="validationTooltip06" >
+          <input type="number" class="form-control" id="validationTooltip06">
         </div>
         <div class="col-12">
-          <button class="btn btn-secondary mt-4" type="submit" id="submit">Submit form</button>
+          <button class="btn btn-secondary mt-4" type="submit" id="submit">Guardar</button>
         </div>
       </form>
-    </div> 
-
-      </div>
+    </div>
   </main>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
