--- a/cart.html
+++ b/cart.html
@@ -99,7 +99,7 @@
           <div class="row align-items-center tarjet mt-5 p-3 rounded-3">
             <div class="col mt-5">
               <h4>Dirección de envío</h4>
-              <div class="">
+              <div>
                 <input
                   type="text"
                   class="form-control mt-1"
@@ -189,29 +189,28 @@
         </div>
         <div class="list-group-item">
           <div class="d-flex  justify-content-between">
-            <h5 class="mb-1">Subtotal</h5>
+            <h5>Subtotal</h5>
             <div>
-              <small>USD </small>123<small>
-
+              <p>USD 123 </p>
               </small>
             </div>
           </div>
-          <p class="mb-1">Costo subtotal general</p>
+          <p >Costo subtotal general</p>
         </div>
         <div class="list-group-item">
           <div class="d-flex justify-content-between">
-            <h5 class="mb-1">Costo de envio</h5>
+            <h5>Costo de envio</h5>
             <div>
-              <small>USD </small><small >123</small>
+              <p>USD 123 </p>
             </div>
           </div>
-          <p class="mb-1">Segun el tipo de envio</p>
+          <p>Segun el tipo de envio</p>
         </div>
         <div class="list-group-item">
           <div class="d-flex justify-content-between">
-            <h5 class="mb-1">Total ($)</h5>
+            <h4>Total ($)</h4>
             <div>
-              <small>USD </small><small >123</small>
+              <p>USD 123 </p>
             </div>
           </div>
         </div>
