--- a/cart.html
+++ b/cart.html
@@ -90,15 +90,18 @@
             <h4 class="">Tipo de envío</h4>
             <div class="m-3">
               <div class="form-check">
-                <input type="radio" class="form-check-input" id="validationFormCheck2" name="radio-stacked" value="15" required />
+                <input type="radio" class="form-check-input" id="validationFormCheck2" name="radio-stacked" value="15"
+                  required />
                 <label class="form-check-label" for="validationFormCheck2">Premium 2 a 5 días (15%)</label>
               </div>
               <div class="form-check">
-                <input type="radio" class="form-check-input" id="validationFormCheck4" name="radio-stacked" value="7" required />
+                <input type="radio" class="form-check-input" id="validationFormCheck4" name="radio-stacked" value="7"
+                  required />
                 <label class="form-check-label" for="validationFormCheck4">Express 5 a 8 días (7%)</label>
               </div>
               <div class="form-check mb-3">
-                <input type="radio" class="form-check-input" id="validationFormCheck3" name="radio-stacked" value="5" required />
+                <input type="radio" class="form-check-input" id="validationFormCheck3" name="radio-stacked" value="5"
+                  required />
                 <label class="form-check-label" for="validationFormCheck3">Standard 12 a15 días (5%)</label>
                 <div class="invalid-feedback">
                   Seleccione un tipo de envío
@@ -108,9 +111,8 @@
           </div>
         </div>
       </div>
-      <!-- e6 -->
 
-
+      <!-- E6 -->
       <div class="container">
         <div class=" mt-5 row align-items-center tarjet p-3 rounded-3 " id="infoCost">
           <div class="list-group-item">
@@ -131,7 +133,7 @@
               <div class="d-flex justify-content-between">
                 <h5>Costo de envio</h5>
                 <div>
-                  <p>USD 123 </p>
+                  <p id="CostoEnvio"></p>
                 </div>
               </div>
               <p>Segun el tipo de envio</p>
@@ -175,14 +177,14 @@
               <div class="container">
                 <div class="col-md-4 position-relative">
                   <label for="validationTooltip015" class="form-label">Numero de tarjeta:</label>
-                  <input type="number" class="form-control" id="validationTooltip015"required disabled>
+                  <input type="number" class="form-control" id="validationTooltip015" required disabled>
                 </div>
                 <div class="col-md-4 position-relative">
                   <label for="validationTooltip016" class="form-label">Código de seg.</label>
-                  <input type="number" class="form-control" id="validationTooltip016"required disabled>
+                  <input type="number" class="form-control" id="validationTooltip016" required disabled>
                 </div>
                 <label for="validationTooltip017" class="form-label">Vencimiento (MM/AA):</label>
-                <input type="month" id="validationTooltip017" class="form-control "required disabled>
+                <input type="month" id="validationTooltip017" class="form-control " required disabled>
               </div>
 
               <div class="form-check mb-3 mt-5">
@@ -193,7 +195,7 @@
 
               <div class="col-md-4 position-relative">
                 <label for="validationTooltip014" class="form-label">Numero de cuenta:</label>
-                <input type="number" class="form-control" id="validationTooltip014"required disabled>
+                <input type="number" class="form-control" id="validationTooltip014" required disabled>
               </div>
 
             </div>
