--- a/cart.html
+++ b/cart.html
@@ -154,7 +154,7 @@
           id="TerminosDeServicio" aria-describedby="divTer">
           <h6>Formas de Pago</h6>
         </button>
-        <p id="alertaPago"> </p>
+        <div id="alertaPago"> </div>
       </div>
       <div class="modal fade" id="modalTerminos" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
